Fix latest news/blog posts spacing

--- a/app/assets/_dev/scss/ailab/_ai_lab_home.scss
+++ b/app/assets/_dev/scss/ailab/_ai_lab_home.scss
@@ -76,6 +76,12 @@
         }
     }
 
+    .block-latest_blog_posts {
+        h2 {
+            padding-top: 0;
+        }
+    }
+
     .nhsuk-promo-group {
         .nhsuk-promo__content__nolink {
             background: $white;
